<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.fragments.LoginFragment"
        android:label="@string/action_bar_login_msg"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.fragments.WelcomeFragment"
        android:label="@string/action_bar_welcome_msg"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.fragments.InstructionsFragment"
        android:label="@string/action_bar_instructions_msg"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoesListFragment"
            app:destination="@id/shoesListFragment"
            app:popUpTo="@id/instructionsFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoesListFragment"
        android:name="com.udacity.shoestore.fragments.ShoesListFragment"
        android:label="@string/action_bar_shoeslist_msg"
        tools:layout="@layout/fragment_shoes_list">
        <action
            android:id="@+id/action_shoesListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
    </fragment>
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/navigation"
        app:popUpToInclusive="true" />
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.fragments.ShoeDetailFragment"
        android:label="@string/action_bar_new_shoe_msg"
        tools:layout="@layout/fragment_shoe_detail">
        <argument
            android:name="shoe"
            app:argType="com.udacity.shoestore.models.Shoe"
            app:nullable="true" />
    </fragment>
</navigation>