<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewmodels.ShoeDetailViewModel" />
    </data>

    <!-- ConstraintLayout is a perfect choice as it allows for complex view positioning without layout nesting -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ShoeDetailFragment">

        <TextView
            android:id="@+id/shoe_type_textview"
            style="@style/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_type"
            app:layout_constraintStart_toStartOf="@+id/description_edit"
            app:layout_constraintTop_toBottomOf="@+id/description_edit" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.shoeDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/description_textview"
            app:layout_constraintTop_toBottomOf="@+id/description_textview" />

        <EditText
            android:id="@+id/company_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.shoeCompany}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/company_textview"
            app:layout_constraintTop_toBottomOf="@+id/company_textview" />

        <TextView
            android:id="@+id/description_textview"
            style="@style/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_edit"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit" />

        <TextView
            android:id="@+id/shoe_size_textview"
            style="@style/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_size"
            app:layout_constraintStart_toStartOf="@+id/company_edit"
            app:layout_constraintTop_toBottomOf="@+id/company_edit" />

        <TextView
            android:id="@+id/company_textview"
            style="@style/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edit"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit" />

        <TextView
            android:id="@+id/shoe_name_textview"
            style="@style/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewModel.shoeName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_textview"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_textview" />

        <EditText
            android:id="@+id/shoe_size_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@={viewModel.shoeSize}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_textview"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_textview" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:onClick="@{(v) -> viewModel.commitChanges(v)}"
            android:text="@android:string/ok"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_types_spinner" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{(v) -> viewModel.navigateUp(v)}"
            android:text="@android:string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ok_button"
            app:layout_constraintTop_toTopOf="@+id/ok_button" />

        <Spinner
            android:id="@+id/shoe_types_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:entries="@array/shoes_types"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_type_textview"
            app:layout_constraintStart_toEndOf="@+id/shoe_type_textview"
            app:layout_constraintTop_toTopOf="@+id/shoe_type_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>